<resources>
    <string name="app_name">News</string>
    <string name="top_headline">Top Headlines</string>
    <string name="author">Author</string>
    <string name="publish_time">Wed 20 January 2021</string>
    <string name="description">description</string>
    <string name="source">source</string>
    <string name="time">time</string>
    <string name="link">link</string>
    <string name="title">Title</string>
    <string name="_10_hours_ago">10 hours ago</string>
</resources>