<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.ArticleDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAppbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_18sp" />

                    <TextView
                        android:id="@+id/tvLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/link"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_14sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:transitionName="photo" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/background_photo" />
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                app:cardElevation="@dimen/dimen_5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="@dimen/dimen_8dp"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_18sp" />

                    <TextView
                        android:id="@+id/tvSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvTitle"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/dimen_8dp"
                        android:layout_marginRight="@dimen/dimen_8dp"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:text="@string/source"
                        android:textSize="@dimen/dimen_14sp" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvTitle"
                        android:layout_toRightOf="@+id/tvSource"
                        android:text="@string/_10_hours_ago"
                        android:textSize="@dimen/dimen_14sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/dimen_5dp"
                app:cardElevation="@dimen/dimen_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_centerInParent="true"
                        style="@android:style/Widget.Holo.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="230dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:background="@drawable/background_time"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_6dp">

        <ImageView
            android:layout_width="@dimen/dimen_16dp"
            android:layout_height="@dimen/dimen_16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dimen_6dp"
            android:src="@drawable/ic_date" />

        <TextView
            android:id="@+id/tvPublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/publish_time"
            android:textColor="@color/grey" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>